--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
 		"lint": "eslint . --ext .ts,.js,.astro",
 		"generate": "npx tsx src/data/gallery-generator.ts src/gallery"
 	},
+	 "engines": {
+    "node": ">=18.20.0"
+  	},
 	"devDependencies": {
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.0.14",
